ffi/pigpio.h

typedef struct
{
   uint32_t tick;
   uint32_t level;
} gpioSample_t;
typedef struct
{
   uint16_t addr;  
   uint16_t flags;
   uint16_t len;   
   uint8_t  *buf;  
} pi_i2c_msg_t;
typedef struct
{
   uint32_t control;          
   int rxCnt;                 
   char rxBuf[BSC_FIFO_SIZE]; 
   int txCnt;                 
   char txBuf[BSC_FIFO_SIZE]; 
} bsc_xfer_t;
typedef void (*gpioTimerFunc_t)    (void);
typedef void (*gpioTimerFuncEx_t)  (void *userdata);
typedef void (*gpioSignalFunc_t)   (int signum);
typedef void (*gpioSignalFuncEx_t) (int    signum,
                                    void  *userdata);
typedef void (*gpioGetSamplesFunc_t)   (const gpioSample_t *samples,
                                        int                 numSamples);
typedef void (*gpioGetSamplesFuncEx_t) (const gpioSample_t *samples,
                                        int                 numSamples,
                                        void               *userdata);
typedef void *(gpioThreadFunc_t) (void *);
int i2cProcessCall(unsigned handle, unsigned i2cReg, unsigned wVal);
void i2cSwitchCombined(int setting);
int i2cSegments(unsigned handle, pi_i2c_msg_t *segs, unsigned numSegs);
int bbI2COpen(unsigned SDA, unsigned SCL, unsigned baud);
int bbI2CClose(unsigned SDA);
int bscXfer(bsc_xfer_t *bsc_xfer);
int bbSPIOpen(
   unsigned CS, unsigned MISO, unsigned MOSI, unsigned SCLK,
   unsigned baud, unsigned spiFlags);
int bbSPIClose(unsigned CS);
int spiOpen(unsigned spiChan, unsigned baud, unsigned spiFlags);
int spiClose(unsigned handle);
int serClose(unsigned handle);
int serWriteByte(unsigned handle, unsigned bVal);
int serReadByte(unsigned handle);
int serDataAvailable(unsigned handle);
int gpioTrigger(unsigned user_gpio, unsigned pulseLen, unsigned level);
int gpioSetWatchdog(unsigned user_gpio, unsigned timeout);
int gpioNoiseFilter(unsigned user_gpio, unsigned steady, unsigned active);
int gpioGlitchFilter(unsigned user_gpio, unsigned steady);
int gpioSetGetSamplesFunc(gpioGetSamplesFunc_t f, uint32_t bits);
int gpioSetGetSamplesFuncEx(
   gpioGetSamplesFuncEx_t f, uint32_t bits, void *userdata);
int gpioSetTimerFunc(unsigned timer, unsigned millis, gpioTimerFunc_t f);
int gpioSetTimerFuncEx(
   unsigned timer, unsigned millis, gpioTimerFuncEx_t f, void *userdata);
pthread_t *gpioStartThread(gpioThreadFunc_t f, void *userdata);
void gpioStopThread(pthread_t *pth);
int gpioRunScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioRunScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioUpdateScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioScriptStatus(unsigned script_id, uint32_t *param);
int gpioStopScript(unsigned script_id);
int gpioDeleteScript(unsigned script_id);
int gpioSetSignalFunc(unsigned signum, gpioSignalFunc_t f);
int gpioSetSignalFuncEx(
   unsigned signum, gpioSignalFuncEx_t f, void *userdata);
uint32_t gpioRead_Bits_0_31(void);
uint32_t gpioRead_Bits_32_53(void);
int gpioWrite_Bits_0_31_Clear(uint32_t bits);
int gpioWrite_Bits_32_53_Clear(uint32_t bits);
int gpioWrite_Bits_0_31_Set(uint32_t bits);
int gpioWrite_Bits_32_53_Set(uint32_t bits);
int gpioHardwareClock(unsigned gpio, unsigned clkfreq);