lib/src/bindings_pi.dart


  int i2cProcessCall(
    int handle,
    int i2cReg,
    int wVal,
  ) {
    _i2cProcessCall ??=
        _dylib.lookupFunction<_c_i2cProcessCall, _dart_i2cProcessCall>(
            'i2cProcessCall');
    return _i2cProcessCall(
      handle,
      i2cReg,
      wVal,
    );
  }

  _dart_i2cProcessCall _i2cProcessCall;

  void i2cSwitchCombined(
    int setting,
  ) {
    _i2cSwitchCombined ??=
        _dylib.lookupFunction<_c_i2cSwitchCombined, _dart_i2cSwitchCombined>(
            'i2cSwitchCombined');
    return _i2cSwitchCombined(
      setting,
    );
  }

  _dart_i2cSwitchCombined _i2cSwitchCombined;

  int i2cSegments(
    int handle,
    ffi.Pointer<pi_i2c_msg_t> segs,
    int numSegs,
  ) {
    _i2cSegments ??=
        _dylib.lookupFunction<_c_i2cSegments, _dart_i2cSegments>('i2cSegments');
    return _i2cSegments(
      handle,
      segs,
      numSegs,
    );
  }

  _dart_i2cSegments _i2cSegments;

  int bbI2COpen(
    int SDA,
    int SCL,
    int baud,
  ) {
    _bbI2COpen ??=
        _dylib.lookupFunction<_c_bbI2COpen, _dart_bbI2COpen>('bbI2COpen');
    return _bbI2COpen(
      SDA,
      SCL,
      baud,
    );
  }

  _dart_bbI2COpen _bbI2COpen;

  int bbI2CClose(
    int SDA,
  ) {
    _bbI2CClose ??=
        _dylib.lookupFunction<_c_bbI2CClose, _dart_bbI2CClose>('bbI2CClose');
    return _bbI2CClose(
      SDA,
    );
  }

  _dart_bbI2CClose _bbI2CClose;

  int bscXfer(
    ffi.Pointer<bsc_xfer_t> bsc_xfer,
  ) {
    _bscXfer ??= _dylib.lookupFunction<_c_bscXfer, _dart_bscXfer>('bscXfer');
    return _bscXfer(
      bsc_xfer,
    );
  }

  _dart_bscXfer _bscXfer;

  int bbSPIOpen(
    int CS,
    int MISO,
    int MOSI,
    int SCLK,
    int baud,
    int spiFlags,
  ) {
    _bbSPIOpen ??=
        _dylib.lookupFunction<_c_bbSPIOpen, _dart_bbSPIOpen>('bbSPIOpen');
    return _bbSPIOpen(
      CS,
      MISO,
      MOSI,
      SCLK,
      baud,
      spiFlags,
    );
  }

  _dart_bbSPIOpen _bbSPIOpen;

  int bbSPIClose(
    int CS,
  ) {
    _bbSPIClose ??=
        _dylib.lookupFunction<_c_bbSPIClose, _dart_bbSPIClose>('bbSPIClose');
    return _bbSPIClose(
      CS,
    );
  }

  _dart_bbSPIClose _bbSPIClose;

  int spiOpen(
    int spiChan,
    int baud,
    int spiFlags,
  ) {
    _spiOpen ??= _dylib.lookupFunction<_c_spiOpen, _dart_spiOpen>('spiOpen');
    return _spiOpen(
      spiChan,
      baud,
      spiFlags,
    );
  }

  _dart_spiOpen _spiOpen;

  int spiClose(
    int handle,
  ) {
    _spiClose ??=
        _dylib.lookupFunction<_c_spiClose, _dart_spiClose>('spiClose');
    return _spiClose(
      handle,
    );
  }

  _dart_spiClose _spiClose;

  int serClose(
    int handle,
  ) {
    _serClose ??=
        _dylib.lookupFunction<_c_serClose, _dart_serClose>('serClose');
    return _serClose(
      handle,
    );
  }

  _dart_serClose _serClose;

  int serWriteByte(
    int handle,
    int bVal,
  ) {
    _serWriteByte ??= _dylib
        .lookupFunction<_c_serWriteByte, _dart_serWriteByte>('serWriteByte');
    return _serWriteByte(
      handle,
      bVal,
    );
  }

  _dart_serWriteByte _serWriteByte;

  int serReadByte(
    int handle,
  ) {
    _serReadByte ??=
        _dylib.lookupFunction<_c_serReadByte, _dart_serReadByte>('serReadByte');
    return _serReadByte(
      handle,
    );
  }

  _dart_serReadByte _serReadByte;

  int serDataAvailable(
    int handle,
  ) {
    _serDataAvailable ??=
        _dylib.lookupFunction<_c_serDataAvailable, _dart_serDataAvailable>(
            'serDataAvailable');
    return _serDataAvailable(
      handle,
    );
  }

  _dart_serDataAvailable _serDataAvailable;

  int gpioTrigger(
    int user_gpio,
    int pulseLen,
    int level,
  ) {
    _gpioTrigger ??=
        _dylib.lookupFunction<_c_gpioTrigger, _dart_gpioTrigger>('gpioTrigger');
    return _gpioTrigger(
      user_gpio,
      pulseLen,
      level,
    );
  }

  _dart_gpioTrigger _gpioTrigger;

  int gpioSetWatchdog(
    int user_gpio,
    int timeout,
  ) {
    _gpioSetWatchdog ??=
        _dylib.lookupFunction<_c_gpioSetWatchdog, _dart_gpioSetWatchdog>(
            'gpioSetWatchdog');
    return _gpioSetWatchdog(
      user_gpio,
      timeout,
    );
  }

  _dart_gpioSetWatchdog _gpioSetWatchdog;

  int gpioNoiseFilter(
    int user_gpio,
    int steady,
    int active,
  ) {
    _gpioNoiseFilter ??=
        _dylib.lookupFunction<_c_gpioNoiseFilter, _dart_gpioNoiseFilter>(
            'gpioNoiseFilter');
    return _gpioNoiseFilter(
      user_gpio,
      steady,
      active,
    );
  }

  _dart_gpioNoiseFilter _gpioNoiseFilter;

  int gpioGlitchFilter(
    int user_gpio,
    int steady,
  ) {
    _gpioGlitchFilter ??=
        _dylib.lookupFunction<_c_gpioGlitchFilter, _dart_gpioGlitchFilter>(
            'gpioGlitchFilter');
    return _gpioGlitchFilter(
      user_gpio,
      steady,
    );
  }

  _dart_gpioGlitchFilter _gpioGlitchFilter;

  int gpioSetGetSamplesFunc(
    ffi.Pointer<ffi.NativeFunction<gpioGetSamplesFunc_t>> f,
    int bits,
  ) {
    _gpioSetGetSamplesFunc ??= _dylib.lookupFunction<_c_gpioSetGetSamplesFunc,
        _dart_gpioSetGetSamplesFunc>('gpioSetGetSamplesFunc');
    return _gpioSetGetSamplesFunc(
      f,
      bits,
    );
  }

  _dart_gpioSetGetSamplesFunc _gpioSetGetSamplesFunc;

  int gpioSetGetSamplesFuncEx(
    ffi.Pointer<ffi.NativeFunction<gpioGetSamplesFuncEx_t>> f,
    int bits,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetGetSamplesFuncEx ??= _dylib.lookupFunction<
        _c_gpioSetGetSamplesFuncEx,
        _dart_gpioSetGetSamplesFuncEx>('gpioSetGetSamplesFuncEx');
    return _gpioSetGetSamplesFuncEx(
      f,
      bits,
      userdata,
    );
  }

  _dart_gpioSetGetSamplesFuncEx _gpioSetGetSamplesFuncEx;

  int gpioSetTimerFunc(
    int timer,
    int millis,
    ffi.Pointer<ffi.NativeFunction<gpioTimerFunc_t>> f,
  ) {
    _gpioSetTimerFunc ??=
        _dylib.lookupFunction<_c_gpioSetTimerFunc, _dart_gpioSetTimerFunc>(
            'gpioSetTimerFunc');
    return _gpioSetTimerFunc(
      timer,
      millis,
      f,
    );
  }

  _dart_gpioSetTimerFunc _gpioSetTimerFunc;

  int gpioSetTimerFuncEx(
    int timer,
    int millis,
    ffi.Pointer<ffi.NativeFunction<gpioTimerFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetTimerFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetTimerFuncEx, _dart_gpioSetTimerFuncEx>(
            'gpioSetTimerFuncEx');
    return _gpioSetTimerFuncEx(
      timer,
      millis,
      f,
      userdata,
    );
  }

  _dart_gpioSetTimerFuncEx _gpioSetTimerFuncEx;

  ffi.Pointer<ffi.Uint64> gpioStartThread(
    ffi.Pointer<ffi.NativeFunction<gpioThreadFunc_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioStartThread ??=
        _dylib.lookupFunction<_c_gpioStartThread, _dart_gpioStartThread>(
            'gpioStartThread');
    return _gpioStartThread(
      f,
      userdata,
    );
  }

  _dart_gpioStartThread _gpioStartThread;

  void gpioStopThread(
    ffi.Pointer<ffi.Uint64> pth,
  ) {
    _gpioStopThread ??=
        _dylib.lookupFunction<_c_gpioStopThread, _dart_gpioStopThread>(
            'gpioStopThread');
    return _gpioStopThread(
      pth,
    );
  }

  _dart_gpioStopThread _gpioStopThread;

  int gpioRunScript(
    int script_id,
    int numPar,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioRunScript ??= _dylib
        .lookupFunction<_c_gpioRunScript, _dart_gpioRunScript>('gpioRunScript');
    return _gpioRunScript(
      script_id,
      numPar,
      param,
    );
  }

  _dart_gpioRunScript _gpioRunScript;

  int gpioUpdateScript(
    int script_id,
    int numPar,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioUpdateScript ??=
        _dylib.lookupFunction<_c_gpioUpdateScript, _dart_gpioUpdateScript>(
            'gpioUpdateScript');
    return _gpioUpdateScript(
      script_id,
      numPar,
      param,
    );
  }

  _dart_gpioUpdateScript _gpioUpdateScript;

  int gpioScriptStatus(
    int script_id,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioScriptStatus ??=
        _dylib.lookupFunction<_c_gpioScriptStatus, _dart_gpioScriptStatus>(
            'gpioScriptStatus');
    return _gpioScriptStatus(
      script_id,
      param,
    );
  }

  _dart_gpioScriptStatus _gpioScriptStatus;

  int gpioStopScript(
    int script_id,
  ) {
    _gpioStopScript ??=
        _dylib.lookupFunction<_c_gpioStopScript, _dart_gpioStopScript>(
            'gpioStopScript');
    return _gpioStopScript(
      script_id,
    );
  }

  _dart_gpioStopScript _gpioStopScript;

  int gpioDeleteScript(
    int script_id,
  ) {
    _gpioDeleteScript ??=
        _dylib.lookupFunction<_c_gpioDeleteScript, _dart_gpioDeleteScript>(
            'gpioDeleteScript');
    return _gpioDeleteScript(
      script_id,
    );
  }

  _dart_gpioDeleteScript _gpioDeleteScript;

  int gpioSetSignalFunc(
    int signum,
    ffi.Pointer<ffi.NativeFunction<gpioSignalFunc_t>> f,
  ) {
    _gpioSetSignalFunc ??=
        _dylib.lookupFunction<_c_gpioSetSignalFunc, _dart_gpioSetSignalFunc>(
            'gpioSetSignalFunc');
    return _gpioSetSignalFunc(
      signum,
      f,
    );
  }

  _dart_gpioSetSignalFunc _gpioSetSignalFunc;

  int gpioSetSignalFuncEx(
    int signum,
    ffi.Pointer<ffi.NativeFunction<gpioSignalFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetSignalFuncEx ??= _dylib.lookupFunction<_c_gpioSetSignalFuncEx,
        _dart_gpioSetSignalFuncEx>('gpioSetSignalFuncEx');
    return _gpioSetSignalFuncEx(
      signum,
      f,
      userdata,
    );
  }

  _dart_gpioSetSignalFuncEx _gpioSetSignalFuncEx;

  int gpioRead_Bits_0_31() {
    _gpioRead_Bits_0_31 ??=
        _dylib.lookupFunction<_c_gpioRead_Bits_0_31, _dart_gpioRead_Bits_0_31>(
            'gpioRead_Bits_0_31');
    return _gpioRead_Bits_0_31();
  }

  _dart_gpioRead_Bits_0_31 _gpioRead_Bits_0_31;

  int gpioRead_Bits_32_53() {
    _gpioRead_Bits_32_53 ??= _dylib.lookupFunction<_c_gpioRead_Bits_32_53,
        _dart_gpioRead_Bits_32_53>('gpioRead_Bits_32_53');
    return _gpioRead_Bits_32_53();
  }

  _dart_gpioRead_Bits_32_53 _gpioRead_Bits_32_53;

  int gpioWrite_Bits_0_31_Clear(
    int bits,
  ) {
    _gpioWrite_Bits_0_31_Clear ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_0_31_Clear,
        _dart_gpioWrite_Bits_0_31_Clear>('gpioWrite_Bits_0_31_Clear');
    return _gpioWrite_Bits_0_31_Clear(
      bits,
    );
  }

  _dart_gpioWrite_Bits_0_31_Clear _gpioWrite_Bits_0_31_Clear;

  int gpioWrite_Bits_32_53_Clear(
    int bits,
  ) {
    _gpioWrite_Bits_32_53_Clear ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_32_53_Clear,
        _dart_gpioWrite_Bits_32_53_Clear>('gpioWrite_Bits_32_53_Clear');
    return _gpioWrite_Bits_32_53_Clear(
      bits,
    );
  }

  _dart_gpioWrite_Bits_32_53_Clear _gpioWrite_Bits_32_53_Clear;

  int gpioWrite_Bits_0_31_Set(
    int bits,
  ) {
    _gpioWrite_Bits_0_31_Set ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_0_31_Set,
        _dart_gpioWrite_Bits_0_31_Set>('gpioWrite_Bits_0_31_Set');
    return _gpioWrite_Bits_0_31_Set(
      bits,
    );
  }

  _dart_gpioWrite_Bits_0_31_Set _gpioWrite_Bits_0_31_Set;

  int gpioWrite_Bits_32_53_Set(
    int bits,
  ) {
    _gpioWrite_Bits_32_53_Set ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_32_53_Set,
        _dart_gpioWrite_Bits_32_53_Set>('gpioWrite_Bits_32_53_Set');
    return _gpioWrite_Bits_32_53_Set(
      bits,
    );
  }

  _dart_gpioWrite_Bits_32_53_Set _gpioWrite_Bits_32_53_Set;

  int gpioHardwareClock(
    int gpio,
    int clkfreq,
  ) {
    _gpioHardwareClock ??=
        _dylib.lookupFunction<_c_gpioHardwareClock, _dart_gpioHardwareClock>(
            'gpioHardwareClock');
    return _gpioHardwareClock(
      gpio,
      clkfreq,
    );
  }

  _dart_gpioHardwareClock _gpioHardwareClock;
